
EXTRA_DIST = build.mkdoc description.mkdoc fdl-1.3.mkdoc		\
	     features.mkdoc modules.mkdoc programming.mkdoc		\
	     template.mkdoc tools.mkdoc top.mkdoc web.mkdoc		\
	     internals.conf logo.svg manual.conf web.conf		\
	     hello_ui.png qtlua_console_1.png qtlua_console_2.png	\
	     manual/html/*.*

