
EXTRA_DIST = hello_uiload/hello.ui hello_uiload/hello.lua hello_uiload/README \
             hello_uic/hello.ui hello_uic/hello.lua hello_uic/hello_ui.lua hello_uic/README \
	     mvc/gridview_dialog.lua mvc/lua_model_tree.lua mvc/lua_model_list.lua \
	     mvc/tableview_dialog.lua mvc/tree_model.lua mvc/treeview_dialog.lua

