
pkgincludedir = $(includedir)/QtLua
pkginclude_HEADERS = \
	Function qtluafunction.hh qtluafunction.hxx \
	Console qtluaconsole.hh qtluaconsole.hxx \
	UserItem qtluauseritem.hh qtluauseritem.hxx	\
	TableTreeModel qtluatabletreemodel.hh qtluatabletreemodel.hxx \
	ItemViewDialog qtluaitemviewdialog.hh qtluaitemviewdialog.hxx \
	TableGridModel qtluatablegridmodel.hh qtluatablegridmodel.hxx \
	LuaModel qtlualuamodel.hh qtlualuamodel.hxx \
	UserItemModel qtluauseritemmodel.hh qtluauseritemmodel.hxx \
	UserItemSelectionModel qtluauseritemselectionmodel.hh qtluauseritemselectionmodel.hxx \
	Iterator qtluaiterator.hh qtluaiterator.hxx \
	UserListItem qtluauserlistitem.hh qtluauserlistitem.hxx \
	Plugin qtluaplugin.hh qtluaplugin.hxx \
	State qtluastate.hh qtluastate.hxx \
	UserData qtluauserdata.hh qtluauserdata.hxx \
	UserObject qtluauserobject.hh qtluauserobject.hxx \
	ValueBase qtluavaluebase.hh qtluavaluebase.hxx \
	Value qtluavalue.hh qtluavalue.hxx \
	ValueRef qtluavalueref.hh qtluavalueref.hxx \
	Ref qtluaref.hh \
	String qtluastring.hh qtluastring.hxx \
	QHashProxy qtluaqhashproxy.hh qtluaqhashproxy.hxx \
	QVectorProxy qtluaqvectorproxy.hh qtluaqvectorproxy.hxx \
	QListProxy qtluaqlistproxy.hh qtluaqlistproxy.hxx \
	QLinkedListProxy qtluaqlinkedlistproxy.hh qtluaqlinkedlistproxy.hxx \
	ArrayProxy qtluaarrayproxy.hh qtluaarrayproxy.hxx \
	MetaType qtluametatype.hh qtluametatype.hxx \
	DispatchProxy qtluadispatchproxy.hh qtluadispatchproxy.hxx
