IF(WIN32)
SET(GUI_TYPE WIN32)
ENDIF(WIN32)

ADD_EXECUTABLE(qtlua_app ${GUI_TYPE} qtlua.cc )
QT5_USE_MODULES(qtlua_app Widgets Core)

TARGET_LINK_LIBRARIES(qtlua_app qtlua)
SET_TARGET_PROPERTIES(qtlua_app PROPERTIES OUTPUT_NAME qtlua CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS qtlua_app RUNTIME DESTINATION ${INSTALL_BIN})
